--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -12,10 +12,14 @@
     width:100%;
     height:100%;
     background-color: rgba(0,0,0,.3);
+    color:white;
+}
+.cambio{
+    color:inherit !important;
 }
 .home_back h1{
     font-size: 40px;
-    margin-top: 20%;
+    padding-top: 23%;
     color:white;
 }
 .home_back p{
@@ -23,7 +27,6 @@
     color:white;
 
 }
-
 
 /*About*/
 #about{
@@ -200,7 +203,9 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    background-color: #616161;
+    border-top:1px solid #f7f7f7  ;
+    border-bottom:1px solid #f7f7f7  ;
+    margin-bottom: 50px;
 }
 .box_rev{
     flex-grow: 1;
@@ -217,8 +222,34 @@
     padding: 0 20px;
 }
 .parrafo, .title{
-    color:white;
     font-size: 160%;
     font-family: 'Montserrat', sans-serif;
     text-align: center;
+}
+.process{
+    width:80%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+}
+.uno, .dos, .tres{
+    flex-grow: 1;
+    width:250px;
+    height:200px;
+    margin: 0 15px;
+    margin-bottom: 50px;
+    padding-top: 7%;
+}
+.uno{
+    /*background-color: #e3dcd5;*/
+    border:1px dotted #e3dcd5;
+}
+.dos{
+    /*background-color: #e0e0e0;*/
+    border:1px dotted #e0e0e0;
+}
+.tres{
+    /*background-color: #464646;*/
+    border:1px dotted #e3dcd5;
 }
