--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -2,7 +2,6 @@
     background-color:#f2f2f2;
     width:100%;
     height:100vh;
-    padding-top: 100px;
     font-family: 'Montserrat', sans-serif;
 }
 .card_login{
@@ -12,6 +11,8 @@
     padding: 3% 3% 1% 3%;
     text-align: center;
     border-radius: 5px;
+    margin-top: 70px;
+
 }
 .redes_login{
     display: flex;
@@ -30,6 +31,7 @@
     text-align: center;
     color: white;
     margin: 0 10px;
+    cursor: pointer;
 }
 .circle_f span, .circle_g span{
     margin-top: 7px;
@@ -42,6 +44,7 @@
     text-align: center;
     color: white;
     margin: 0 10px;
+    cursor: pointer;
 }
 .line_log{
     height:1px;
