--- a/src/components/cart/Cart.css
+++ b/src/components/cart/Cart.css
@@ -3,6 +3,8 @@
     height:260px;
     flex-grow: 1;
     margin: 10px 20px;
+    text-align: center;
+    padding-bottom: 20px;
 
 }
 .cart_img{
@@ -19,13 +21,17 @@
     font-size: .9rem;
     text-transform: uppercase;
     letter-spacing: 1px;
-    margin-top: 2px;
+    margin-top: 6px;
 }
 .apear{
     margin-top: 40px;
     color:transparent;
     font-size: 13px;
     transition: all .5s ease;
+}
+.pes{
+    margin: 0;
+    margin-top: -4px;
 }
 .cart:hover .apear{
     color:inherit;
