--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -11,7 +11,7 @@
     padding: 3% 3% 1% 3%;
     text-align: center;
     border-radius: 5px;
-    margin-top: 70px;
+    margin-top: 50px;
 
 }
 .redes_login{
@@ -59,7 +59,7 @@
     margin: 30px auto;
     color:#889096;
 }
-.log_email input{
+.log_email .input{
     width:100%;
     height:40px;
     border:1px solid #A7B0B7;
@@ -82,4 +82,11 @@
     border: transparent;
     color:white;
     cursor: pointer;
+}
+.mostrar{
+    margin: 0;
+    margin-left: 5px;
+}
+.tog{
+    display: inline-flex;
 }
