--- a/src/components/nav/Nav.css
+++ b/src/components/nav/Nav.css
@@ -29,3 +29,13 @@
     margin-top: 10px;
     font-size: 120%;
 }
+.close{
+    padding:5px 10px;
+    margin-top: 10px;
+    font-size: 120%;
+    cursor: pointer;
+    background-color: transparent;
+}
+/*.close:hover{*/
+    /*background-color: rgba(255,255,255,0.5);*/
+/*}*/
