--- a/src/components/checkout/Check.css
+++ b/src/components/checkout/Check.css
@@ -12,18 +12,19 @@ top: 15%;
 }
 
 .credit-card {
-  background: rgb(241,241,239);
   margin: 1em auto;
   padding:  2.5em 1em 2em 1.5em;
   border-radius: 10px;
-  border-top: 2.5em #00B5B5 solid;
-  box-shadow: rgba(0, 0, 0, 0.156863) 0 2px 1px 0, rgba(0, 0, 0, 0.117647) 0 0 0 0;
   max-width: 19.063em;
   height: 12.031em;
 }
 
 .payment-form {
-  margin: 2em 1em;
+   border: 1px solid #c5d1d8;
+  padding: 20px;
+  margin: 20px 5px;
+  position: absolute;
+  top: 60%;
 }
 
 .form-check fieldset {
@@ -77,28 +78,66 @@ width: 10.25em;
   margin-left: 1px;
 }
 
-.credit-card span {
-  font-family: 'courier';
-  font-size: 1.125em;
-  text-transform: uppercase;
-  letter-spacing: .06em;
-  display: block;
-  margin-top: .25em;
-}
 
 .form-check button {
-  width:100%;
-  height: 10%;
-  color: #ffffff;
-  background-color: #9ba5ab;
-  border: none;
-  padding: 10px 10px 10px 0;
-  font-size: 1.25em;
 
-  margin: 10px 5px;
-  box-shadow: rgba(0, 0, 0, 0.156863) 0px 2px 5px 0px, rgba(0, 0, 0, 0.117647) 0px 2px 10px 0px;
+width: 50%;
+background-color: #616161;
+border-radius: 0;
+border: transparent;
+color: white;
+padding: 3px 6px;
+position: relative;
+left: 20%;
+
+
 }
 
 .form-check label > span {
   line-height: 1.5em;
 }
+
+.card-image {
+  position: relative;
+
+  left: -28%;
+  top:-85%;
+
+}
+
+.card-image img{
+width: 300px;
+height: 150px;
+
+}
+
+  .flip{
+
+        position: relative;
+        transition: all 3s ease;
+        transform: perspective(600px);
+        transform-origin: 100% 50%;
+        transform-style: preserve-3d;
+
+    }
+
+
+    .flip:hover{
+
+        transform: perspective(600px) rotateY(-180deg) translateX(48%);
+
+    }
+
+
+    .flip .flip-1,
+    .flip .flip-2{
+
+        position: absolute;
+        backface-visibility: hidden;
+
+    }
+    .flip .flip-2{
+
+        transform: rotateY(-180deg);
+
+    }
