--- a/src/components/checkout/Check.css
+++ b/src/components/checkout/Check.css
@@ -141,3 +141,26 @@ height: 150px;
         transform: rotateY(-180deg);
 
     }
+
+    @media screen and (max-width: 420px) {
+          .form-check {
+
+            height: -2px;
+            position: absolute;
+            left: -1%;
+            top: -2%;
+            }
+
+            .card-image {
+              position: relative;
+              left:-30%;
+              top:30%;
+
+            }
+
+            .card-image img{
+            width: 60px;
+            height: 45px;
+
+            }
+         }
