--- a/src/components/cart/Cart.css
+++ b/src/components/cart/Cart.css
@@ -1,8 +1,8 @@
 .cart{
 
-    width:300px;
-
-    height:260px;
+    width:200px;
+    min-height: 229px;
+    max-height:230px;
     flex-grow: 1;
     margin: 10px 20px;
     text-align: center;
@@ -13,6 +13,7 @@
     height:80%;
     width:100%;
     overflow: hidden;
+    background-color: white;
 }
 .cart_img img{
     width:100%;
