--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,12 +1,13 @@
 /*HomeDisplay*/
 .home_back{
     width:100%;
-    height:100vh;
+    height:auto;
+    min-height: 100vh;
     background-size: cover;
     text-align: center;
     background-position: center;
     background-attachment: fixed;
-    background-image: url('http://www.huevosorganicos.com/wp-content/uploads/2016/08/huevos-organicos.jpg');
+    background-image: url('../../assets/fondo.png');
 }
 .cover{
     width:100%;
@@ -14,18 +15,48 @@
     background-color: rgba(0,0,0,.3);
 
 }
+.home_data{
+    padding-top: 180px;
+}
+.home_back img{
+    width:225px;
+}
 
-.home_back h1{
-    font-size: 40px;
-    padding-top: 23%;
+.home_back h3{
+    font-size: 18px;
+    margin-top: 7%;
+    margin-bottom: 30px;
     color:white;
 }
 .home_back p{
-    font-size: 20px;
+    font-size: 13px;
     color:white;
+    margin-top: 30px;
 
 }
+.line_white{
+    width:100px;
+    margin: 0 auto;
+    border: none;
+    background-color: white;
+    height:2px;
+    border-radius: 1px;
 
+}
+.btn_home{
+    padding: 5px 24px;
+    background-color: transparent;
+    border: .5px solid white;
+    color:white;
+    margin-top: 60px;
+}
+a{
+    color: inherit;
+}
+.fa_home{
+    color:white;
+    margin: 40px 0;
+}
 /*About*/
 #about{
     background-color: white;
@@ -39,12 +70,45 @@
     margin: 0 auto;
     text-align: center;
     align-self: center;
+    padding-bottom: 50px;
+    padding-top: 50px;
 }
 .titulo{
     font-size: 30px;
+    color:#1C7E7A;
+}
+.line_blue{
+    width:100px;
+    border: none;
+    background-color: #1C7E7A;
+    margin: 20px auto;
+    height:2px;
+    border-radius: 1px;
+}
+.flexi{
+    margin-top: 50px;
+    display: flex;
+    flex-wrap: wrap;
 }
 .texto{
-    font-size: 18px;
+    font-size: 15px;
+    color:#79797B;
+}
+.box_about{
+    width:250px;
+    flex-grow: 1;
+    padding: 0 2%;
+}
+.box_about img{
+    width:120px;
+}
+.box_about h3{
+    color:#1C7E7A;
+    font-size:18px ;
+}
+.box_about p{
+    color:#79797B;
+    font-size: 14px;
 }
 
 /*Destacados*/
@@ -111,36 +175,32 @@
 
 /*Publi*/
 .publi{
-    background-image:url('https://images.pexels.com/photos/48817/jam-preparations-jars-fruit-48817.jpeg?w=940&h=650&dpr=2&auto=compress&cs=tinysrgb');
+    background-color: #444444;
     height:350px;
     width:100%;
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
+
     text-align: center;
-    display: flex;
-    justify-content: center;
-    font-family: 'Montserrat', sans-serif;
+
 }
 .publi h2{
     color:white;
     font-size: 250%;
-    margin-top: 10%;
+    padding-top: 3%;
 }
-.btn{
-    margin-top: 20px;
-    width:100px;
-    padding: 4px 8px;
-    border-radius: 2px;
-    background-color: transparent;
-    color:white;
-    cursor:pointer;
+.bflex{
+    width:70%;
+    margin: 50px auto;
+    display: flex;
+    flex-wrap: wrap;
 }
-.btn:hover{
-    transition: all 1s ease;
-    background-color: rgba(255,255,255,0.5);
+.partner{
+    width:250px;
+    flex-grow: 1;
 }
-
+.partner img{
+    width:120px;
+    height:auto;
+}
 /*Info*/
 .info_text{
     width:70%;
