--- a/src/components/nav/Nav.css
+++ b/src/components/nav/Nav.css
@@ -1,27 +1,23 @@
 .pestanas{
     display: flex;
     float: right;
+}
 
-}
-.img_logo{
-    float: left;
-    margin-top: 10px;
-}
 .nav{
     width:100%;
     height:50px;
-    position: fixed;
+    display: flex;
+    justify-content: space-between;
     z-index: 999;
     font-family: 'Montserrat', sans-serif;
-    color:white;
+    color:#3E3E3E;
+    border-bottom: 1px solid #F8F8F7;
 
 }
-.color{
-    background-color: white;
-    border-bottom: 1px solid #f7f7f7 ;
-    color:inherit;
-
+.img_logo img{
+    width:120px;
 }
+
 .nav a{
     text-decoration: none;
     color:inherit;
