--- a/src/components/perfil/Perfil.css
+++ b/src/components/perfil/Perfil.css
@@ -15,7 +15,7 @@
 border-style:  ridge ;
 border-color: white;
   position: relative;
-     top:50%;
+     top:70px;
      right:40%;
      overflow:hidden;
 }
@@ -42,9 +42,18 @@ justify-content: center;
 }
 
 .form-perfil-direccion{
+  display:flex;
+  order: 1;
+  flex-direction:column;
+font-family: 'Montserrat', sans-serif;
+  width: 80%;
+right: -10%;
+padding-left: 60px;
+  border-radius: 5px;
   position: relative;
-   text-align: center;
+ text-align: left;
  font-weight:bold;
+ background-color: white;
 }
 
 
@@ -66,6 +75,7 @@ justify-content: center;
     border: 2px solid #77c1f6;
 }
 
+
 .form-perfil-direccion input[type=number] {
     width: 45%;
     height: 8%;
@@ -85,20 +95,42 @@ justify-content: center;
 
 
 .form-perfil-direccion button {
-    width: 45%;
-border-radius: 5px;
-  padding: 6px 4px;
+  position: relative;
+  left: 15%;
+  top:-4px;
+  width: 60%;
+  background-color: #616161;
+  border-radius: 0;
+  border: transparent;
   color: white;
-  background-color: #00a2ae;
-  border: none;
-  margin-top: 10px;
+  padding: 3px 6px;
 }
 
 .form-perfil-direccion  button:hover {
-  color: #ddecee;
-  box-shadow: inset 0 0 0 3px #70c3c9;
+  color: #ffffff;
+  box-shadow: inset 0 0 0 3px #ffffff;
 
 }
+
+
+.form-perfil-direccion button:before {
+ content:'';
+ position: absolute;
+ top: 0px;
+ left: 0px;
+ width: 0px;
+ height: 35px;
+ background: rgba(255,255,255,0.3);
+ border-radius: 5px;
+ transition: all 2s ease;
+}
+
+.form-perfil-direccion button:hover:before{
+ width: 100%;
+
+}
+
+
 /* tabla de ant:  */
 .custom-filter-dropdown {
   padding: 8px;
@@ -116,6 +148,7 @@ border-radius: 5px;
   color: #f50;
 }
 
+/* pedidos form:  */
 .pedidos-table{
   width: 65%;
   height: 50%;
@@ -123,14 +156,68 @@ border-radius: 5px;
 top:150px;
    left:25%;
    text-align: center;
+  background-color: white;
 }
 
 .tabs{
   position: relative;
-  top:-500px;
+  top:-200px;
   left: 30%;
 justify-content: center;
 width: 600px;
-height: 250px;
 
 }
+
+
+
+@media screen and (max-width: 420px) {
+.tabs   {
+  position: relative;
+  top:35px;
+  left: 15%;
+justify-content: center;
+width: 250px;
+
+}
+
+.form-perfil-direccion  {
+  height: -2px;
+
+
+
+}
+.form-perfil-direccion label {
+placeholder:none;
+
+
+
+}
+.form-perfil-direccion button {
+  height: 50px;
+  width: 50px;
+  font-size: 10px;
+
+
+}
+
+.avatar{
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+border-style:  ridge ;
+border-color: white;
+  position: relative;
+     top:110px;
+    left: -2%;
+     overflow:hidden;
+}
+.back{
+  position: relative;
+  top: -30px;
+  left: 50px;
+
+}
+
+
+
+        }
