--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,13 +1,17 @@
 /*HomeDisplay*/
-.home_back{
-    width:100%;
+.slide{
+    width: 100%;
+    padding-bottom: 110px;
     height:auto;
-    min-height: 100vh;
-    background-size: cover;
-    text-align: center;
-    background-position: center;
-    background-attachment: fixed;
-    background-image: url('../../assets/fondo.png');
+}
+#bg-video{
+    position: fixed;
+    top:-50px;
+    left:0;
+    margin: 0;
+    min-width: 100%;
+    min-height:110%;
+    z-index: -1000;
 }
 .cover{
     width:100%;
@@ -17,18 +21,21 @@
 }
 .home_data{
     padding-top: 180px;
+    width: 50%;
+    margin: 0 auto;
+    text-align: center;
 }
-.home_back img{
+.home_data img{
     width:225px;
 }
 
-.home_back h3{
+.home_data h3{
     font-size: 18px;
     margin-top: 7%;
     margin-bottom: 30px;
     color:white;
 }
-.home_back p{
+.home_data p{
     font-size: 13px;
     color:white;
     margin-top: 30px;
@@ -64,6 +71,7 @@ a{
     align-items: center;
     justify-content: center;
     height:500px;
+    padding-bottom: 50px;
 }
 .about{
     width: 70%;
@@ -178,9 +186,8 @@ a{
     background-color: #444444;
     height:350px;
     width:100%;
-
     text-align: center;
-
+    padding-bottom: 0;
 }
 .publi h2{
     color:white;
