--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -64,232 +64,342 @@ a{
     color:white;
     margin: 40px 0;
 }
-/*About*/
-#about{
+/*#Nosotros*/
+.nosotros{
     background-color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height:500px;
-    padding-bottom: 50px;
+    padding: 5rem 0;
 }
-.about{
-    width: 70%;
+.nos_text{
+    width:50%;
     margin: 0 auto;
     text-align: center;
-    align-self: center;
-    padding-bottom: 50px;
-    padding-top: 50px;
+    color:#242C3D;
+    font-family: 'GT Walsheim','Helvetica Neue',Helvetica,Arial,sans-serif;
 }
-.titulo{
-    font-size: 30px;
-    color:#1C7E7A;
-}
-.line_blue{
-    width:100px;
-    border: none;
-    background-color: #1C7E7A;
-    margin: 20px auto;
-    height:2px;
-    border-radius: 1px;
-}
-.flexi{
-    margin-top: 50px;
-    display: flex;
-    flex-wrap: wrap;
-}
-.texto{
-    font-size: 15px;
-    color:#79797B;
-}
-.box_about{
-    width:250px;
-    flex-grow: 1;
-    padding: 0 2%;
-}
-.box_about img{
-    width:120px;
-}
-.box_about h3{
-    color:#1C7E7A;
-    font-size:18px ;
-}
-.box_about p{
-    color:#79797B;
-    font-size: 14px;
-}
-
-/*Destacados*/
-.destacados{
-    background-color: #f3f3f3;
-
-    padding: 50px 0;
-}
-.destacados h2{
-    text-align: center;
+.nos_text h2{
+    font-size: 3.5rem;
+    line-height: 2.7rem;
     margin-bottom: 30px;
+
 }
-.cat{
+.nos_text p{
+    font-size: 1.4rem;
+    line-height: 1.8rem;
+    margin-bottom: 2.5rem;
+}
+.btn_explore{
+    color: #323232;
+    background-color: transparent;
+    border: 1px solid #AAA;
+    padding: .8rem 2.5rem;
+    cursor: pointer;
+    font-weight: 700;
+    font-size: .7rem;
+    text-transform: uppercase;
+    letter-spacing: .1rem;
+}
+/*Relevantes*/
+
+.relevantes{
+    /*background-color: rgb(244, 242, 242);*/
+    background-color: white;
+    padding-top: 100px;
+}
+.rel_box{
     width:80%;
     margin: 0 auto;
+    height:500px;
+}
+.item{
     display: flex;
-    flex-wrap: wrap;
+
 }
-.card{
+.box_owl{
     width:300px;
-    height:220px;
-    margin: 10px;
-    position: relative;
-    cursor:pointer;
-    transition: all .5s ease;
+    flex-grow: 1;
 }
-.img_card{
+.box_owl h4{
+    font-size: 1rem;
+    line-height: 1.75rem;
+    letter-spacing: .1rem;
+}
+.box_owl h3{
+    font-size: 1.75rem;
+    line-height: 2.167rem;
+}
+.box_owl p{
+    font-size: 1rem;
+    line-height: 1.4rem;
+}
+.pad{
+    padding: 8% 4% ;
+}
+/*History*/
+.history{
+    background-color: white;
     width:100%;
-    height:100%;
     overflow: hidden;
 }
-.img_card img{
-    width:100%;
-    height:auto;
-    filter: blur(0px);
-    transition: all .5s ease;
+.logo_history{
+    width:600px;
 }
-.card span{
-    position: absolute;
-    bottom:20px;
-    font-size: 18px;
-    margin-left: 15px;
-    transition: all .5s ease;
-}
-.card p{
-   color:transparent;
-    position: absolute;
-    bottom: 0;
-    left:15px;
-    transition: all .5s ease;
-}
-.card:hover img{
-    filter: blur(2px);
-    transform: scale(1.2);
-}
-.card:hover span{
-    bottom: 40px;
-}
-.card:hover p{
-    display: inline-block;
-    bottom: 20px;
-    color:inherit;
-}
-
-/*Publi*/
-.publi{
-    background-color: #444444;
-    height:350px;
-    width:100%;
-    text-align: center;
-    padding-bottom: 0;
-}
-.publi h2{
-    color:white;
-    font-size: 250%;
-    padding-top: 3%;
-}
-.bflex{
-    width:70%;
-    margin: 50px auto;
-    display: flex;
-    flex-wrap: wrap;
-}
-.partner{
-    width:250px;
-    flex-grow: 1;
-}
-.partner img{
-    width:120px;
-    height:auto;
-}
-/*Info*/
-.info_text{
-    width:70%;
-    margin: 0 auto;
-    font-size: 18px;
-    margin-top: 30px;
-    text-align: justify;
-}
-.info{
-    height:1200px;
-}
-.info h2{
-    text-align: center;
-    padding-top: 50px;
-    font-size: 30px;
-}
-.info_img{
+.card_history{
+    box-shadow: 4px 4px 14px 0px rgba(0,0,0,0.1);
+    box-sizing: border-box;
+    padding: 2em;
+    width: 50%;
+    min-width: 400px;
     position: relative;
-    margin-top: 50px;
+    display: inline-block;
+    margin-right: 10%;
+    -webkit-transform: translate(0%, 30%);
+    transform: translate(30%, 30%);
+    background-color: #fff;
+    text-align: left;
+    z-index: 999;
 }
-.img_uno{
-    width:500px;
-    position: absolute;
-    left: 8%;
+.card_history{
+    line-height: 1.5;
+    font-size: 15px;
 }
-.img_dos{
-    width:500px;
-    position: absolute;
-    top:330px;
-    right:8%;
-}
-/*Seller*/
-.seller{
-    margin-top: 50px;
-}
-.clip{
-    background-color:   rgb(250, 246, 228);
-    height:500px;
-    -webkit-clip-path: polygon(0 0, 100% 30%, 100% 100%, 0% 100%);
-    clip-path: polygon(0 0, 100% 30%, 100% 100%, 0% 100%);
-}
-.flex{
-    padding-top: 150px;
-    margin: 0 auto;
-    width:50%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-}
-.box_flex{
-    flex-grow: 1;
-    width:300px;
+.coffe_img{
+    width:600px;
 }
 
-/*Revista*/
-.rev_fl{
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    border-top:1px solid #f7f7f7  ;
-    border-bottom:1px solid #f7f7f7  ;
-    margin-bottom: 50px;
-}
-.box_rev{
-    flex-grow: 1;
-    width: 500px;
-}
-.rev_img{
-    width:100%;
-    height:400px;
-    background-image: url('http://bioplaza.org/bioplaza/wp-content/uploads/2012/06/Timeline-Facebook.jpg-851x321.jpg');
-    background-size: cover;
-    background-position: center;
-}
-.rev_text{
-    padding: 0 20px;
-}
-.parrafo, .title{
-    font-size: 160%;
-    font-family: 'Montserrat', sans-serif;
-    text-align: center;
+
+
+
+/*About*/
+/*#about{*/
+    /*background-color: white;*/
+    /*display: flex;*/
+    /*align-items: center;*/
+    /*justify-content: center;*/
+    /*height:500px;*/
+    /*padding-bottom: 50px;*/
+/*}*/
+/*.about{*/
+    /*width: 70%;*/
+    /*margin: 0 auto;*/
+    /*text-align: center;*/
+    /*align-self: center;*/
+    /*padding-bottom: 50px;*/
+    /*padding-top: 50px;*/
+/*}*/
+/*.titulo{*/
+    /*font-size: 30px;*/
+    /*color:#1C7E7A;*/
+/*}*/
+/*.line_blue{*/
+    /*width:100px;*/
+    /*border: none;*/
+    /*background-color: #1C7E7A;*/
+    /*margin: 20px auto;*/
+    /*height:2px;*/
+    /*border-radius: 1px;*/
+/*}*/
+/*.flexi{*/
+    /*margin-top: 50px;*/
+    /*display: flex;*/
+    /*flex-wrap: wrap;*/
+/*}*/
+/*.texto{*/
+    /*font-size: 15px;*/
+    /*color:#79797B;*/
+/*}*/
+/*.box_about{*/
+    /*width:250px;*/
+    /*flex-grow: 1;*/
+    /*padding: 0 2%;*/
+/*}*/
+/*.box_about img{*/
+    /*width:120px;*/
+/*}*/
+/*.box_about h3{*/
+    /*color:#1C7E7A;*/
+    /*font-size:18px ;*/
+/*}*/
+/*.box_about p{*/
+    /*color:#79797B;*/
+    /*font-size: 14px;*/
+/*}*/
+
+/*!*Destacados*!*/
+/*.destacados{*/
+    /*background-color: #f3f3f3;*/
+
+    /*padding: 50px 0;*/
+/*}*/
+/*.destacados h2{*/
+    /*text-align: center;*/
+    /*margin-bottom: 30px;*/
+/*}*/
+/*.cat{*/
+    /*width:80%;*/
+    /*margin: 0 auto;*/
+    /*display: flex;*/
+    /*flex-wrap: wrap;*/
+/*}*/
+/*.card{*/
+    /*width:300px;*/
+    /*height:220px;*/
+    /*margin: 10px;*/
+    /*position: relative;*/
+    /*cursor:pointer;*/
+    /*transition: all .5s ease;*/
+/*}*/
+/*.img_card{*/
+    /*width:100%;*/
+    /*height:100%;*/
+    /*overflow: hidden;*/
+/*}*/
+/*.img_card img{*/
+    /*width:100%;*/
+    /*height:auto;*/
+    /*filter: blur(0px);*/
+    /*transition: all .5s ease;*/
+/*}*/
+/*.card span{*/
+    /*position: absolute;*/
+    /*bottom:20px;*/
+    /*font-size: 18px;*/
+    /*margin-left: 15px;*/
+    /*transition: all .5s ease;*/
+/*}*/
+/*.card p{*/
+   /*color:transparent;*/
+    /*position: absolute;*/
+    /*bottom: 0;*/
+    /*left:15px;*/
+    /*transition: all .5s ease;*/
+/*}*/
+/*.card:hover img{*/
+    /*filter: blur(2px);*/
+    /*transform: scale(1.2);*/
+/*}*/
+/*.card:hover span{*/
+    /*bottom: 40px;*/
+/*}*/
+/*.card:hover p{*/
+    /*display: inline-block;*/
+    /*bottom: 20px;*/
+    /*color:inherit;*/
+/*}*/
+
+/*!*Publi*!*/
+/*.publi{*/
+    /*background-color: #444444;*/
+    /*height:350px;*/
+    /*width:100%;*/
+    /*text-align: center;*/
+    /*padding-bottom: 0;*/
+/*}*/
+/*.publi h2{*/
+    /*color:white;*/
+    /*font-size: 250%;*/
+    /*padding-top: 3%;*/
+/*}*/
+/*.bflex{*/
+    /*width:70%;*/
+    /*margin: 50px auto;*/
+    /*display: flex;*/
+    /*flex-wrap: wrap;*/
+/*}*/
+/*.partner{*/
+    /*width:250px;*/
+    /*flex-grow: 1;*/
+/*}*/
+/*.partner img{*/
+    /*width:120px;*/
+    /*height:auto;*/
+/*}*/
+/*!*Info*!*/
+/*.info_text{*/
+    /*width:70%;*/
+    /*margin: 0 auto;*/
+    /*font-size: 18px;*/
+    /*margin-top: 30px;*/
+    /*text-align: justify;*/
+/*}*/
+/*.info{*/
+    /*height:1200px;*/
+/*}*/
+/*.info h2{*/
+    /*text-align: center;*/
+    /*padding-top: 50px;*/
+    /*font-size: 30px;*/
+/*}*/
+/*.info_img{*/
+    /*position: relative;*/
+    /*margin-top: 50px;*/
+/*}*/
+/*.img_uno{*/
+    /*width:500px;*/
+    /*position: absolute;*/
+    /*left: 8%;*/
+/*}*/
+/*.img_dos{*/
+    /*width:500px;*/
+    /*position: absolute;*/
+    /*top:330px;*/
+    /*right:8%;*/
+/*}*/
+/*!*Seller*!*/
+/*.seller{*/
+    /*margin-top: 50px;*/
+/*}*/
+/*.clip{*/
+    /*background-color:   rgb(250, 246, 228);*/
+    /*height:500px;*/
+    /*-webkit-clip-path: polygon(0 0, 100% 30%, 100% 100%, 0% 100%);*/
+    /*clip-path: polygon(0 0, 100% 30%, 100% 100%, 0% 100%);*/
+/*}*/
+/*.flex{*/
+    /*padding-top: 150px;*/
+    /*margin: 0 auto;*/
+    /*width:50%;*/
+    /*display: flex;*/
+    /*flex-wrap: wrap;*/
+    /*justify-content: center;*/
+    /*align-items: center;*/
+/*}*/
+/*.box_flex{*/
+    /*flex-grow: 1;*/
+    /*width:300px;*/
+/*}*/
+
+/*!*Revista*!*/
+/*.rev_fl{*/
+    /*display: flex;*/
+    /*flex-wrap: wrap;*/
+    /*align-items: center;*/
+    /*border-top:1px solid #f7f7f7  ;*/
+    /*border-bottom:1px solid #f7f7f7  ;*/
+    /*margin-bottom: 50px;*/
+/*}*/
+/*.box_rev{*/
+    /*flex-grow: 1;*/
+    /*width: 500px;*/
+/*}*/
+/*.rev_img{*/
+    /*width:100%;*/
+    /*height:400px;*/
+    /*background-image: url('http://bioplaza.org/bioplaza/wp-content/uploads/2012/06/Timeline-Facebook.jpg-851x321.jpg');*/
+    /*background-size: cover;*/
+    /*background-position: center;*/
+/*}*/
+/*.rev_text{*/
+    /*padding: 0 20px;*/
+/*}*/
+/*.parrafo, .title{*/
+    /*font-size: 160%;*/
+    /*font-family: 'Montserrat', sans-serif;*/
+    /*text-align: center;*/
+/*}*/
+
+.revista{
+    background-color: white;
+    padding-top: 100px;
 }
 .process{
     width:80%;
