--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -1,14 +1,17 @@
 .login{
     background-color:#f2f2f2;
     width:100%;
-    height:100vh;
-    font-family: 'Montserrat', sans-serif;
+    height:auto;
+    padding-bottom: 50px;
+    padding-top:80px;
+    font-family: 'Roboto', sans-serif;
+
 }
 .card_login{
     background-color: white;
     width:35%;
     margin:0 auto;
-    padding: 3% 3% 1% 3%;
+    padding: 30px 20px;
     text-align: center;
     border-radius: 5px;
     margin-top: 50px;
@@ -34,7 +37,8 @@
     cursor: pointer;
 }
 .circle_f span, .circle_g span{
-    margin-top: 7px;
+    margin-top: 10px;
+    font-size: 20px;
 }
 .circle_g{
     background-color: #DC4A38;
@@ -67,6 +71,7 @@
     transition: border .2s ease;
     border-radius: .3125rem;
     line-height:1.2;
+
 }
 .ayuda{
     margin: 20px 0;
@@ -74,11 +79,12 @@
     color:#889096;
 }
 .btn_login{
-    background-color:#616161;
+    background-color:rgb(40, 160, 228);
     width:50%;
+    height:40px;
     padding: 3px 6px;
-    border-radius: 15px;
     margin-left: 25%;
+    border-radius: 20px;
     border: transparent;
     color:white;
     cursor: pointer;
@@ -86,7 +92,27 @@
 .mostrar{
     margin: 0;
     margin-left: 5px;
+    margin-top: 5px;
 }
 .tog{
     display: inline-flex;
+    margin-top: 10px;
+}
+@media(max-width:650px){
+    .card_login{
+        width:80%;
+        margin: 0 auto;
+        height:auto;
+        padding: 10px;
+    }
+    .log_email .input{
+        width:90%;
+        height:40px;
+        border:1px solid #A7B0B7;
+        opacity: .6;
+        transition: border .2s ease;
+        border-radius: .3125rem;
+        line-height:1.2;
+
+    }
 }
