--- a/src/components/nav/Nav.css
+++ b/src/components/nav/Nav.css
@@ -1,38 +1,109 @@
-.pestanas{
-    display: flex;
-    float: right;
-}
-
-.nav{
-    background-color: white;
+.nav-bar{
+    background-color: transparent;
     width:100%;
-    height:50px;
+    height:60px;
     display: flex;
     justify-content: space-between;
-    z-index: 999;
-    font-family: 'Montserrat', sans-serif;
-    color:#3E3E3E;
-    border-bottom: 1px solid #F8F8F7;
+    align-items: center;
 
+    z-index: 9999;
 }
-.img_logo img{
-    width:120px;
+.divider{
+    /*display: block;*/
+    width: 2px;
+    height: 11px;
+    border:none;
+    background: white;
+    margin: auto 10px;
 }
-
-.nav a{
-    text-decoration: none;
+.logo{
+    color:hsla(0,0%,100%,.6);
+    padding-left: 20px;
+}
+.pestanas{
+    display: flex;
     color:inherit;
-    padding:5px 10px;
-    margin-top: 10px;
-    font-size: 120%;
+    padding-right: 20px;
+    font-size: 13px;
+    align-items: center;
+}
+.logo_fix{
+    height:30px;
 }
 .close{
-    padding:5px 10px;
-    margin-top: 10px;
-    font-size: 120%;
+    background-color: white;
+    /*color:white;*/
+    width:120px;
+    height:35px;
     cursor: pointer;
-    background-color: transparent;
+    border-radius: 17.5px;
+    border: none;
 }
-/*.close:hover{*/
-    /*background-color: rgba(255,255,255,0.5);*/
-/*}*/
+.userphoto{
+
+    width:50px;
+    height:50px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+.dropbtn {
+    background-color: transparent;
+    height:100%;
+    width:60px;
+    color: white;
+
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    top:40px;
+    right:-20px;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+.color{
+    background-color: green;
+}
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+a{
+    text-decoration: none;
+
+}
+.less{
+    margin: 0 10px;
+    color: white;
+}
+@media(max-width: 440px){
+    .less{
+        display: none;
+    }
+
+}
