--- a/src/components/product/Product.css
+++ b/src/components/product/Product.css
@@ -1,15 +1,18 @@
 .productos{
-    background-color: #f3f3f3;
+    background-color: #fff;
     text-align: center;
     padding: 50px 0;
+    border-top: 1px solid #f8f8f7;
+    border-bottom: 1px solid #f8f8f7;
+}
+.titulo{
+    font-size: 2.4rem;
+    text-transform: uppercase;
 }
 .box_navbar{
     height:50px;
     width:100%;
-
     border-bottom:1px solid #f7f7f7 ;
-
-
 }
 .fijo{
     width:100%;
@@ -60,7 +63,8 @@
 
 /*Detail*/
 .detalle{
-    height:100vh;
+    height:auto;
+    padding-bottom: 70px;
 }
 
 .detail{
@@ -137,7 +141,7 @@
     width:150px;
     padding: 6px 4px;
     color:white;
-    background-color: #00a2ae;
+    background-color: #456D56;
     border:none;
     margin-top: 20px;
 }
