--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,6 +1,5 @@
 .footer{
-    background-color: #f2f2f2;
-    border-top-color: #333333;
+    background-color: #444444;
     width:100%;
     height:auto;
     padding-bottom: 20px;
@@ -9,36 +8,10 @@
     justify-content: space-between;
     font-size: 15px;
     font-family: 'Montserrat', sans-serif;
-
+    text-align: center;
 }
-
-.inscript{
-    width:50%;
-    margin: 0 auto;
-}
-.inscript h3{
-    padding: 5px 0 10px 0;
-}
-.inscript p{
-    padding: 10px 0;
-}
-.inscript input{
-    width:50%;
-  margin-left: 10%;
-    border: 1px solid #E0E0E0;
-    border-radius: 1px;
-    padding: 3px 6px;
-    margin-bottom: 20px;
-
-}
-.btn_enviar{
-    width:20%;
-    margin-left: 10%;
-    background-color: #616161;
-    border-radius: 0;
-    border:transparent;
-    color:white;
-    padding: 3px 6px;
+.footer img{
+    width:120px;
 }
 .redes{
     margin-top: 50px;
@@ -48,12 +21,14 @@
     margin: 0 20px;
 }
 .footer_section{
-
+    color:#7E7D7D;
     width:50%;
     margin: 30px auto;
     display: flex;
     justify-content: space-between;
 }
+
 .footer_section p{
 
 }
+
