--- a/src/components/perfil/Perfil.css
+++ b/src/components/perfil/Perfil.css
@@ -1,4 +1,14 @@
+.perfil-completo{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+
+
+}
+
 .avatar-user{
+
   width:100%;
   height:200px;
   font-family: 'Montserrat', sans-serif;
@@ -7,46 +17,42 @@
   background-size: center;
   background-image: url('https://images.pexels.com/photos/15964/pexels-photo.jpg?w=940&h=650&auto=compress&cs=tinysrgb');
 }
-
 .avatar{
+  display: flex;
+  flex-direction: column;
+justify-content: flex-start;
+  flex-wrap: wrap;
   height: 150px;
   width: 150px;
   border-radius: 50%;
 border-style:solid ;
 border-color: white;
-  position: relative;
-     top:70px;
-     right:40%;
+left: 10%;
+     top:60px;
      overflow:hidden;
 }
-
 
 .avatar:hover {
 -webkit-transform:scale(1.3);transform:scale(1.3);
 }
 
-
-
 .avatar-user h1{
-position: relative;
-   top:50%;
-justify-content: center;
+  position: relative;
+  top:50%;
+  justify-content: center;
    color: white;
-
 }
-
 .submenu-position{
   margin: 0 auto;
   position: absolute;
    top: 10%;
 }
-
 .form-perfil-direccion{
-  display:flex;
-  flex-direction:column;
+  display: -webkit-flex;
+-webkit-justify-content: space-around;
 font-family: 'Montserrat', sans-serif;
   width: 80%;
-  height:600px;
+  height:425px;
 right: -10%;
 padding-left: 60px;
   border-radius: 5px;
@@ -58,7 +64,7 @@ padding-left: 60px;
 
 .form-direccion{
   top: 40px;
-  position: relative;
+
 }
 
 .form-perfil-direccion input[type=text] {
@@ -137,6 +143,7 @@ padding-left: 60px;
 
 /* tabla de ant:  */
 .custom-filter-dropdown {
+
   padding: 8px;
   border-radius: 6px;
   background: #fff;
@@ -154,74 +161,21 @@ padding-left: 60px;
 
 /* pedidos form:  */
 .pedidos-table{
-  width: 65%;
+width: 120%;
   height: 50%;
-  position: relative;
-top:150px;
-   left:25%;
-   text-align: center;
+  top:150px;
+  left:25%;
+  text-align: center;
   background-color: white;
 }
 
 .tabs{
-  position: relative;
-  top:-200px;
-  left: 30%;
-justify-content: center;
-width: 600px;
-
-}
-
-
-
-@media screen and (max-width: 420px) {
-.tabs   {
-  position: relative;
-  top:35px;
-  left: 15%;
-justify-content: center;
-width: 250px;
-
-}
-
-.form-perfil-direccion  {
-  height: -2px;
-
+display: flex;
+flex-direction: row;
+justify-content:space-around;
+flex-wrap: wrap;
+  top:-10px;
+width:1000px;
 
 
 }
-.form-perfil-direccion label {
-placeholder:none;
-
-
-
-}
-.form-perfil-direccion button {
-  height: 50px;
-  width: 50px;
-  font-size: 10px;
-
-
-}
-
-.avatar{
-  height: 100px;
-  width: 100px;
-  border-radius: 50%;
-border-style:  ridge ;
-border-color: white;
-  position: relative;
-     top:110px;
-    left: -2%;
-     overflow:hidden;
-}
-.back{
-  position: relative;
-  top: -30px;
-  left: 50px;
-
-}
-
-
-
-        }
